force-app/main/default/objects/Health_Record__c/fields/General_Health_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_Health_Comments__c</fullName>
    <label>General Health Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>