force-app/main/default/objects/Health_Record__c/fields/Next_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Due_Date__c</fullName>
    <formula>Vaccination_Date__c + 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Due Date</label>
    <type>Date</type>
</CustomField>