force-app/main/default/objects/Health_Record__c/fields/Pet__c.field-meta.xml
<CustomField>
    <fullName>Pet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the Pet record</description>
    <label>Pet</label>
    <referenceTo>Pet__c</referenceTo>
    <relationshipLabel>Health Records</relationshipLabel>
    <relationshipName>Health_Records</relationshipName>
    <type>Lookup</type>
</CustomField>