force-app/main/default/objects/Health_Record__c/fields/Vaccination_Date__c.field-meta.xml
<CustomField>
    <fullName>Vaccination_Date__c</fullName>
    <description>When the vaccine was given</description>
    <label>Vaccination Date</label>
    <type>Date</type>
</CustomField>