force-app/main/default/objects/Health_Record__c/fields/Vaccine_Name__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Name__c</fullName>
    <label>Vaccine Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>