force-app/main/default/objects/Health_Record__c/fields/Vet_Name__c.field-meta.xml
<CustomField>
    <fullName>Vet_Name__c</fullName>
    <description>Veterinarian who did it</description>
    <label>Vet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>