force-app/main/default/objects/Health_Record__c/fields/Vet_s_Address__c.field-meta.xml
<CustomField>
    <fullName>Vet_s_Address__c</fullName>
    <label>Vet&apos;s Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>