force-app/main/default/objects/Health_Record__c/fields/Vet_s_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Vet_s_Phone_Number__c</fullName>
    <label>Vet&apos;s Phone Number</label>
    <type>Phone</type>
</CustomField>