force-app/main/default/objects/Health_Record__c/validationRules/phone_number_should_be_start_with_98.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_number_should_be_start_with_98</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    NOT(BEGINS( Vet_s_Phone_Number__c , &quot;98&quot;)),
    LEN( Vet_s_Phone_Number__c ) &lt;&gt; 10
)</errorConditionFormula>
    <errorMessage>Vet&apos;s phone number must start with 98 and be exactly 10 digits.</errorMessage>
</ValidationRule>